# interpreter

./: README.md  failingtest.input  interpreter.cabal  monad-transformers.hs  test.input
.stack-work/install/x86_64-osx/lts-7.13/8.0.1/flag-cache/: mtl-2.2.1-6qsR1PHUy5lL47Hpoa4jCM
.stack-work/install/x86_64-osx/lts-7.13/8.0.1/lib/x86_64-osx-ghc-8.0.1/interpreter-0.1.0.0-4t3ZNL3Kouy2a8LgHlUI1M/: Interpreter.dyn_hi  Interpreter.hi
.stack-work/install/x86_64-osx/lts-7.13/8.0.1/pkgdb/: interpreter-0.1.0.0-4t3ZNL3Kouy2a8LgHlUI1M.conf  package.cache
app/: .#Main.hs  Main.hs
src/: .#Program.hs  Color.hs  Evaluator.hs  Interpreter.hs  Program.hs
tests/: test.input
