name:                interpreter
version:             0.1.0.0
synopsis:            CS4032 Project
description:         Please see README.md
homepage:            https://github.com/paterson/interpreter#readme
license:             BSD3
license-file:        LICENSE
author:              Niall Paterson
maintainer:          example@example.com
copyright:           2016 Niall Paterson here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Interpreter
  other-modules:       Program, Color, Evaluator
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , transformers
                     , mtl
                     , ansi-terminal
                     , concurrent-output
                     , stm
  default-language:    Haskell2010

executable interpreter-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , interpreter
  default-language:    Haskell2010

test-suite interpreter-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , interpreter
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/paterson/interpreter
